# GOT-PROJECT-3

./: .gitignore  README.md
Cliente/: CMakeCache.txt  CMakeLists.txt  GOT  GOT.cbp  Makefile  cmake_install.cmake  main.cpp
Cliente/config/: config.json
Cliente/src/: Commands.h  FileNode.cpp  FileNode.h  Huffman.h  Repository.cpp  Repository.h  RepositoryList.cpp  RepositoryList.h
ClienteAdrian/: CMakeLists.txt  Doxyfile  main.cpp
ClienteAdrian/config/: commitRegister.json  config.json
ClienteAdrian/docs/html/: Commands_8h_source.html  FileManager_8h_source.html  FileNode_8h_source.html  Huffman_8h_source.html  RepositoryList_8h_source.html  Repository_8h_source.html  annotated.html  classFileNode-members.html  classFileNode.html  classRepository-members.html  classRepository.html  classRepositoryList-members.html  classRepositoryList.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  structNode-members.html  structNode.html  structcomp-members.html  structcomp.html
ClienteAdrian/docs/html/search/: all_0.js  all_1.js  all_6.js  classes_1.js  classes_3.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js
ClienteAdrian/pruebafinal555/: pruebaArchivo.txt
ClienteAdrian/resources/: Help.txt
ClienteAdrian/src/: Commands.h  FileManager.h  FileNode.cpp  FileNode.h  Repository.cpp  Repository.h  RepositoryList.cpp  RepositoryList.h
REST_API_ADRIAN/: .project  gotDB.sql  pom.xml
Rest-Api/: package-lock.json  package.json
(+42 files in other folders)
